--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "analytics-builder",
   "version": "0.0.0",
-  "license": "MIT",
+  "license": "Apache 2.0",
   "angular-cli": {},
   "scripts": {
     "ng": "ng",
