--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "karma-jasmine": "~1.1.0",
     "karma-jasmine-html-reporter": "^0.2.2",
     "karma-jasmine-matchers": "^3.7.0",
+    "karma-junit-reporter": "^1.2.0",
     "protractor": "~5.1.0",
     "ts-node": "~2.0.0",
     "tslint": "~4.5.0",
