--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@angular/router": ">=4.0.0-beta <5.0.0",
     "class-validator": "^0.6.8",
     "core-js": "^2.4.1",
+    "d3": "^4.7.4",
     "lodash": "^4.17.4",
     "rxjs": "^5.1.0",
     "zone.js": "^0.8.5"
@@ -29,6 +30,7 @@
   "devDependencies": {
     "@angular/cli": "1.0.0-rc.2",
     "@angular/compiler-cli": ">=4.0.0-beta <5.0.0",
+    "@types/d3": "^4.7.0",
     "@types/deep-freeze": "0.0.29",
     "@types/jasmine": "2.5.38",
     "@types/jasmine-matchers": "^0.2.30",
