--- a/package.json
+++ b/package.json
@@ -12,24 +12,25 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/common": ">=4.0.0-beta <5.0.0",
-    "@angular/compiler": ">=4.0.0-beta <5.0.0",
-    "@angular/core": ">=4.0.0-beta <5.0.0",
-    "@angular/forms": ">=4.0.0-beta <5.0.0",
-    "@angular/http": ">=4.0.0-beta <5.0.0",
-    "@angular/platform-browser": ">=4.0.0-beta <5.0.0",
-    "@angular/platform-browser-dynamic": ">=4.0.0-beta <5.0.0",
-    "@angular/router": ">=4.0.0-beta <5.0.0",
+    "@angular/common": "^4.0.1",
+    "@angular/compiler": "^4.0.1",
+    "@angular/core": "^4.0.1",
+    "@angular/forms": "^4.0.1",
+    "@angular/http": "^4.0.1",
+    "@angular/platform-browser": "^4.0.1",
+    "@angular/platform-browser-dynamic": "^4.0.1",
+    "@angular/router": "^4.0.1",
     "class-validator": "^0.6.8",
     "core-js": "^2.4.1",
     "d3": "^4.7.4",
     "lodash": "^4.17.4",
+    "ng2-bootstrap": "^1.6.1",
     "rxjs": "^5.1.0",
     "zone.js": "^0.8.5"
   },
   "devDependencies": {
-    "@angular/cli": "1.0.0-rc.2",
-    "@angular/compiler-cli": ">=4.0.0-beta <5.0.0",
+    "@angular/cli": "^1.0.0-rc.2",
+    "@angular/compiler-cli": "^4.0.1",
     "@types/d3": "^4.7.0",
     "@types/deep-freeze": "0.0.29",
     "@types/jasmine": "2.5.38",
