--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "class-validator": "^0.6.8",
     "core-js": "^2.4.1",
     "d3": "^4.7.4",
+    "immutable": "^3.8.1",
     "lodash": "^4.17.4",
     "ng2-bootstrap": "^1.6.1",
     "rxjs": "^5.1.0",
