Adding tests to guarantee that if class's Observable properties update then the class.asObservable() does too. Fixing some bugs.

--- a/package.json
+++ b/package.json
@@ -26,22 +26,25 @@
     "immutable": "^3.8.1",
     "lodash": "^4.17.4",
     "ng2-bootstrap": "^1.6.1",
-    "rxjs": "^5.1.0",
+    "rxjs": "^5.3.0",
     "zone.js": "^0.8.5"
   },
   "devDependencies": {
     "@angular/cli": "^1.0.0-rc.2",
     "@angular/compiler-cli": "^4.0.1",
+    "@types/bluebird": "^3.5.2",
     "@types/d3": "^4.7.0",
     "@types/deep-freeze": "0.0.29",
     "@types/jasmine": "2.5.38",
     "@types/jasmine-matchers": "^0.2.30",
     "@types/lodash": "^4.14.57",
     "@types/node": "~6.0.60",
+    "bluebird": "^3.5.0",
     "codelyzer": "~2.0.0",
     "deep-freeze": "0.0.1",
     "jasmine-core": "~2.5.2",
     "jasmine-matchers": "^0.2.3",
+    "jasmine-promises": "^0.4.1",
     "jasmine-spec-reporter": "~3.2.0",
     "karma": "~1.4.1",
     "karma-chrome-launcher": "~2.0.0",
