--- a/package.json
+++ b/package.json
@@ -22,12 +22,12 @@
     "@angular/router": "^4.0.1",
     "@ng-bootstrap/ng-bootstrap": "^1.0.0-alpha.22",
     "bootstrap": "~4.0.0-alpha.6",
-    "class-validator": "^0.6.8",
     "core-js": "^2.4.1",
     "d3": "^4.7.4",
     "immutable": "^3.8.1",
     "lodash": "^4.17.4",
     "rxjs": "^5.3.0",
+    "validate.js": "^0.11.1",
     "zone.js": "^0.8.5"
   },
   "devDependencies": {
