Making input/output channels draggable and adding tests for dragging ladder components

--- a/package.json
+++ b/package.json
@@ -33,18 +33,19 @@
   "devDependencies": {
     "@angular/cli": "^1.0.0-rc.2",
     "@angular/compiler-cli": "^4.0.1",
+    "@angular/language-service": "^4.0.2",
     "@types/bluebird": "^3.5.2",
     "@types/d3": "^4.7.0",
     "@types/deep-freeze": "0.0.29",
-    "@types/jasmine": "2.5.38",
-    "@types/jasmine-matchers": "^0.2.30",
+    "@types/jasmine": "^2.5.38",
+    "@types/jasmine-expect": "^3.6.1",
     "@types/lodash": "^4.14.57",
     "@types/node": "~6.0.60",
     "bluebird": "^3.5.0",
     "codelyzer": "~2.0.0",
     "deep-freeze": "0.0.1",
     "jasmine-core": "~2.5.2",
-    "jasmine-matchers": "^0.2.3",
+    "jasmine-expect": "^3.7.0",
     "jasmine-promises": "^0.4.1",
     "jasmine-spec-reporter": "~3.2.0",
     "karma": "~1.4.1",
