--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@angular/platform-browser-dynamic": "^4.0.1",
     "@angular/router": "^4.0.1",
     "@ng-bootstrap/ng-bootstrap": "^1.0.0-alpha.22",
+    "angular-resizable-element": "^1.1.0",
     "core-js": "^2.4.1",
     "d3": "^4.8.0",
     "font-awesome": "^4.7.0",
