--- a/package.json
+++ b/package.json
@@ -12,15 +12,15 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/common": "^4.0.1",
-    "@angular/compiler": "^4.0.1",
-    "@angular/core": "^4.0.1",
-    "@angular/forms": "^4.0.1",
-    "@angular/http": "^4.0.1",
-    "@angular/platform-browser": "^4.0.1",
-    "@angular/platform-browser-dynamic": "^4.0.1",
-    "@angular/router": "^4.0.1",
-    "@ng-bootstrap/ng-bootstrap": "^1.0.0-alpha.22",
+    "@angular/common": "^4.1.3",
+    "@angular/compiler": "^4.1.3",
+    "@angular/core": "^4.1.3",
+    "@angular/forms": "^4.1.3",
+    "@angular/http": "^4.1.3",
+    "@angular/platform-browser": "^4.1.3",
+    "@angular/platform-browser-dynamic": "^4.1.3",
+    "@angular/router": "^4.1.3",
+    "@ng-bootstrap/ng-bootstrap": "^1.0.0-alpha.26",
     "angular-resizable-element": "^1.1.0",
     "core-js": "^2.4.1",
     "d3": "^4.8.0",
@@ -32,9 +32,9 @@
     "zone.js": "^0.8.5"
   },
   "devDependencies": {
-    "@angular/cli": "^1.0.0-rc.2",
-    "@angular/compiler-cli": "^4.0.1",
-    "@angular/language-service": "^4.0.2",
+    "@angular/cli": "^1.0.4",
+    "@angular/compiler-cli": "^4.1.3",
+    "@angular/language-service": "^4.1.3",
     "@types/bluebird": "^3.5.2",
     "@types/d3": "^4.7.0",
     "@types/deep-freeze": "0.0.29",
