--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "font-awesome": "^4.7.0",
     "immutable": "^3.8.1",
     "lodash": "^4.17.4",
+    "ng2-cookies": "^1.0.12",
     "rxjs": "^5.3.0",
     "validate.js": "^0.11.1",
     "zone.js": "^0.8.5"
