--- a/package.json
+++ b/package.json
@@ -62,7 +62,7 @@
     "protractor": "~5.1.0",
     "ts-node": "~2.0.0",
     "tslint": "~4.5.0",
-    "typescript": "^2.2.1",
+    "typescript": "2.3.4",
     "webpack": "^2.6.1"
   }
 }
