--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "iot-builder",
-  "version": "0.0.0",
+  "name": "analytics-builder",
+  "version": "1.0.0-beta-2",
   "license": "Apache 2.0",
   "scripts": {
     "ng": "ng",
