--- a/package.json
+++ b/package.json
@@ -31,7 +31,8 @@
     "ng2-cookies": "^1.0.12",
     "rxjs": "^5.3.0",
     "validate.js": "^0.11.1",
-    "zone.js": "^0.8.5"
+    "zone.js": "^0.8.5",
+    "bluebird": "^3.5.0"
   },
   "devDependencies": {
     "@angular/cli": "^1.1.0",
@@ -44,7 +45,6 @@
     "@types/jasmine-expect": "^3.6.1",
     "@types/lodash": "^4.14.57",
     "@types/node": "~6.0.60",
-    "bluebird": "^3.5.0",
     "codelyzer": "~2.0.0",
     "deep-freeze": "0.0.1",
     "jasmine-core": "~2.5.2",
