--- a/package.json
+++ b/package.json
@@ -23,16 +23,17 @@
     "@angular/router": "^4.1.3",
     "@ng-bootstrap/ng-bootstrap": "^1.0.0-alpha.26",
     "angular-resizable-element": "^1.1.0",
+    "bluebird": "^3.5.0",
     "core-js": "^2.4.1",
     "d3": "^4.8.0",
+    "file-saver": "^1.3.3",
     "font-awesome": "^4.7.0",
     "immutable": "^3.8.1",
     "lodash": "^4.17.4",
     "ng2-cookies": "^1.0.12",
     "rxjs": "^5.3.0",
     "validate.js": "^0.11.1",
-    "zone.js": "^0.8.5",
-    "bluebird": "^3.5.0"
+    "zone.js": "^0.8.5"
   },
   "devDependencies": {
     "@angular/cli": "^1.1.0",
@@ -41,6 +42,7 @@
     "@types/bluebird": "^3.5.2",
     "@types/d3": "^4.7.0",
     "@types/deep-freeze": "0.0.29",
+    "@types/file-saver": "0.0.1",
     "@types/jasmine": "^2.5.38",
     "@types/jasmine-expect": "^3.6.1",
     "@types/lodash": "^4.14.57",
